fixed margin and alignment errors

--- a/css/about.css
+++ b/css/about.css
@@ -83,12 +83,4 @@
         padding: 0 2rem;
         text-align: justify;
     }
-
-    .benifits{
-        margin: 0;
-    }
-
-    .benifits .card{
-        margin: 1rem auto;
-    }
 }
