--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,7 @@ label {
     display: none;
 }
 
-.hamburger{
+.hamburger {
     font-weight: 700;
 }
 
@@ -59,8 +59,10 @@ label {
         padding: 1rem;
     }
 
-    .header label{
+    .header label {
         display: inline;
+        position: relative;
+        left: 85%;
     }
 
     .brand {
@@ -69,7 +71,7 @@ label {
         justify-content: center;
     }
 
-    .navigation {
+    .navigation-items {
         display: none;
     }
 
@@ -82,16 +84,11 @@ label {
         padding: 0.5rem;
     }
 
-    .navigation-items {
+    #hamburger:checked~.navigation-items {
         display: flex;
         flex-direction: column;
         justify-content: center;
         align-items: center;
-    }
-
-    #hamburger:checked~ .navigation {
-        height: 100%;
-        display: block;
     }
 
 }
